src/views/Give/give.scss
.give-view {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  overflow: hidden;

  .ohm-card .header {
    min-height: 3em;
  }
}

.cta-text {
  color: #999999;
}

.causes-body {
  display: flex;
  flex-direction: column;
  align-items: center;
  align-content: center;
  justify-content: center;
  width: 100%;
  margin-top: 10px;

  .MuiGrid-root.MuiGrid-item {
    display: flex;
    justify-self: center !important;
  }

  .data-grid {
    justify-content: center;
    align-items: center;
    height: 100%;
  }

  .cause-card {
    height: auto;
    min-width: 333px;
    max-width: 700px;
    width: auto;
    box-shadow: 0px 2px 28px rgba(0, 0, 0, 0.03);
    background-color: #ffffff0e;
    backdrop-filter: blur(60px);
    -webkit-backdrop-filter: blur(60px);
    border-radius: 5px !important;
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    margin-bottom: 2rem;

    .cause-title {
      padding-left: 0rem;
      padding-bottom: 0rem;
    }

    .cause-title:hover {
      h5 {
        text-decoration: underline;
      }
    }

    .cause-image {
      width: 33%;
      height: 100%;
      justify-content: flex-start;
      padding: 30px;

      img {
        border-radius: 5%;
      }
    }

    .cause-content {
      height: 100%;
      width: 66%;
      display: flex;
      flex-direction: column;
      justify-content: space-between;
      padding-right: 30px;
      padding-top: 30px;
      padding-bottom: 30px;

      .MuiTypography-body2 {
        margin-top: 0.5rem;
      }

      .cause-header {
        justify-content: space-between;
        align-items: center;
      }
    }

    .view-details {
      padding-bottom: 0rem;

      .cause-link {
        display: flex;
        flex-direction: row;
        align-content: center;
        align-items: center;
        justify-content: space-between;
        color: #999999;
        font-size: small;
        border-radius: 12px;
        font-weight: 500;

        svg path {
          fill: #999999;
        }

        > p {
          margin-bottom: 0px;
        }
      }
    }

    .cause-link:hover {
      color: #F4D092;

      svg path {
        fill: #F4D092;
      }
    }

    .cause-misc-info {
      display: flex;
      flex-direction: row;
      justify-content: space-between;
      align-items: center;
    }

    .cause-misc-info .MuiGrid-item {
      height: 70px;
      padding-left: 0px;
      align-items: flex-end;
    }

    .cause-info-icon {
      margin-right: 0.2rem;
    }

    .cause-give-button {
      width: 12rem;
      margin-left: auto;
      margin-right: 0;    }
  }
}

.custom-recipient {
  padding-top: 2rem;
  padding-right: 2.3rem;
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
}

.give-education-graphics {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-content: center;
  align-items: center;
}

.give-staked-balance {
  display: flex;
  flex-direction: row;
  justify-content: space-between;

  .MuiTypography-body2 {
    margin-top: 0.5rem;
  }
}

.yield-action-area {
  justify-content: space-around;
  align-items: center;
  height: auto;
  padding-bottom: 1rem;
}

.give-yield-title {
  display: flex;
  flex-direction: row;
}

.give-yield-modals {
  display: flex;
  flex-direction: row;

  .add-recipient-button {
    margin-right: 0.33em;
  }
}

.ohm-modal {
  position: absolute;
  left: 50%;
  top: 50%;
  // Use decimal values to fix anti-aliasing in Chrome. Ridiculous.
  transform: translate(-50.048%, -50.048%);

  .yield-header {
    align-items: center;
    display: flex;
    height: 44px;
    justify-content: center;

    a {
      position: absolute;
      left: 1.7rem;
    }
  }

  .give-modal-header {
    display: flex;
    flex-direction: row;
  }

  .modal-input {
    width: 100%;
    max-width: 100%;
    padding-bottom: 1rem;

    .MuiFormHelperText-root {
      color: red;
    }
  }

  .ohm-modal-submit {
    display: flex;
    align-items: center;
    width: 10rem;
    height: 43px !important;
    margin-top: 1rem;
    margin-left: auto;
    margin-right: auto;

    button {
      width: 375px;
    }
  }
}

.give-confirmation-details {
  .confirmation-sect-header {
    margin-bottom: 16px;
  }

  .details-row {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;

    .recipient-address-col {
      display: flex;
      flex-direction: column;
      align-items: flex-end;
      align-content: flex-end;
    }
  }
}

.give-confirmation-divider {
  margin-top: 16px;
  margin-bottom: 16px;

  .MuiDivider-root {
   background-color: #F4D092;
  }
}

.card-header {
  display: flex;
  justify-content: space-between;
  vertical-align: middle;
  margin-left: 16px;
}

.ohm-card {
  .cell-align-end {
    display: flex;
    justify-content: flex-end;
  }

  .MuiTypography-body2 {
    margin-bottom: 0.5rem;
  }

  .MuiTypography-body1 {
    margin-bottom: 0.5rem;
  }
}

.redeem-table {
  .MuiTableCell-body {
    font-size: 0.875rem;
    font-family: Square;
    font-weight: 500;
    line-height: 1;
    padding-left: 0rem;
    padding-bottom: 1rem;
  }
}

.arrow-graphic {
  svg path {
    fill: #999999;
  }
}

.yield-graphic {
  svg path {
    fill: none;
  }
}

/* slightly more dark and opaque background fallback for Firefox (not supporting backdrop-filter) */
@supports not ((-webkit-backdrop-filter: none) or (backdrop-filter: none)) {
  .modal-container {
    background-color: rgba(100, 100, 100, 0.95);
  }
}

